--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qrates</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -23,5 +24,235 @@
         </ul>
       </div>
     </header>
+    <main>
+      <section>
+        <div>
+          <div>
+            <span>Why Qrates</span>
+            <h1>Your music on vinyl. Without tht barriers.</h1>
+            <p>
+              Full-serivce pressing, a global retail network, customer support -
+              and you keep up to 85% of porfits. ↓
+            </p>
+          </div>
+          <img src="" alt="" />
+        </div>
+        <div>
+          <img src="" alt="" />
+          <img src="" alt="" />
+        </div>
+      </section>
+      <div>
+        <p>
+          No matter you're at in your carrer, we've goy a production model to
+          suit you.
+        </p>
+      </div>
+      <section>
+        <div>
+          <span>No risk, no waste</span>
+          <h2>Crowfunding</h2>
+          <p>
+            Rally your fans and gather pledges. Press the exact number of
+            records you need, without having to pay anything upfront.
+          </p>
+          <img src="" alt="" />
+          <button>
+            <a href=""> Learn more </a>
+          </button>
+        </div>
+        <div>
+          <span>Get into it</span>
+          <h2>Press & Sell</h2>
+          <p>
+            Launch your record, sooner. take pre-orders from fans and we'll take
+            care of the rest.
+          </p>
+          <img src="" alt="" />
+          <button>
+            <a href=""> Learn more </a>
+          </button>
+        </div>
+      </section>
+      <div>
+        <p>
+          Just after straight up vinyl pressing? We do that too. Records are
+          shipped in bulk to wherever you need.
+        </p>
+        <a href="">Start a press only project</a>
+      </div>
+      <section></section>
+      <section>
+        <div>
+          <div>
+            <img src="" alt="" />
+            <img src="" alt="" />
+            <img src="" alt="" />
+            <img src="" alt="" />
+            <img src="" alt="" />
+          </div>
+          <div>
+            <span>Retail network</span>
+            <h2>Worldwide distro, demystified.</h2>
+            <p>
+              Get direct access to over 150 of our retail partners across the
+              globe.
+            </p>
+          </div>
+        </div>
+        <div>
+          <div>
+            <img src="" alt="" />
+            <span>Customer support</span>
+            <h2>Here to help, whenever you need it.</h2>
+            <p>
+              Whether you're an artist in the middle of product, or a fan with
+              questions about you order, our teams is here to help.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <span>Community</span>
+        <h2>Join a growing community.</h2>
+        <p>
+          We're building a home for the next generation of vinyl lovers. Get in
+          front of fans, connect with artists, labels and stores.
+        </p>
+        <button>
+          <a href="">Browse artists</a>
+        </button>
+      </section>
+      <section>
+        <div>
+          <img src="" alt="" />
+        </div>
+        <div>
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+        </div>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <a href=""><span>Chilled cow</span> is on Qrates</a>
+          </li>
+          <li>
+            <a href=""><span>SOL</span> is on Qrates</a>
+          </li>
+          <li>
+            <a href=""><span>Vuflpeck</span> is on Qrates</a>
+          </li>
+          <li>
+            <a href=""><span>Chillhop</span> is on Qrates</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <div>
+          <span>artists on Qrates</span>
+          <p>
+            "The response was overwhelming. it made me wonder why I hadn't
+            pressed any records on vinyl before now. It felt like something that
+            people had been waiting for for a long time."
+          </p>
+          <p>-SOL</p>
+          <div>
+            <button>1</button>
+            <button>2</button>
+          </div>
+        </div>
+        <div>
+          <img src="" alt="" />
+        </div>
+      </section>
+      <section>
+        <span>Vinyl studio</span>
+        <h2>Make it real with Qrates Vinyl Studio</h2>
+        <p>
+          Design the lock and feel of your vinyl and use the profit calculator
+          to immediately see how much your project will cost, and how much
+          you'll earn.
+        </p>
+        <img src="" alt="" />
+        <button>
+          <a href="">Try it now</a>
+        </button>
+        <div><img src="" alt="" /></div>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <div>
+          <p>For artists</p>
+          <ul>
+            <li>Why Qrates?</li>
+            <li>Crowdfundig</li>
+            <li>Press & Sell</li>
+            <li>Our Services</li>
+            <li>Artist Toolkit</li>
+            <li>referral Program</li>
+          </ul>
+        </div>
+        <div>
+          <p>For fans</p>
+          <ul>
+            <li>Discovcer</li>
+            <li>Records</li>
+            <li>Stories</li>
+            <li>Lists</li>
+            <li>Artists & Labels</li>
+          </ul>
+        </div>
+        <div>
+          <p>Our company</p>
+          <ul>
+            <li>About Qrates</li>
+            <li>Careers</li>
+            <li>Partners</li>
+          </ul>
+        </div>
+        <div>
+          <p>Help</p>
+          <ul>
+            <li>Support Center</li>
+            <li>Contact Us</li>
+            <li>Returns</li>
+            <li>Shipping</li>
+          </ul>
+        </div>
+      </div>
+      <div>
+        <img src="" alt="" />
+        <div>
+          <ul>
+            <li>
+              <a href="">
+                <img src="" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="" alt="" />
+              </a>
+            </li>
+          </ul>
+          <ul>
+            <li>Terms of Service</li>
+            <li>Privacy Policy</li>
+            <li>Legal Infor</li>
+            <li>© TDMS Inc.</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
