--- a/index.html
+++ b/index.html
@@ -5,29 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qrates</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <img src="" alt="" />
+      <a href="https://github.com/abroudoux">
+        <img src="./assets/wireframe.png" alt="Accueil Qrates" />
+      </a>
       <nav>
         <ul>
-          <li><a href="">Discover</a></li>
-          <li><a href="">Search</a></li>
-          <li><a href="">DiscoverWhy Qrates</a></li>
-          <li><a href="">Cart</a></li>
+          <li><a href="https://github.com/abroudoux">Discover</a></li>
+          <li><a href="https://github.com/abroudoux">Search</a></li>
+          <li><a href="https://github.com/abroudoux">Why Qrates</a></li>
+          <li><a href="https://github.com/abroudoux">Cart</a></li>
         </ul>
       </nav>
       <div>
         <ul>
-          <li><a href="">Log in</a></li>
-          <li><a href="">Make a record</a></li>
+          <li><a href="https://github.com/abroudoux">Log in</a></li>
+          <li><a href="https://github.com/abroudoux">Make a record</a></li>
         </ul>
       </div>
     </header>
     <main>
-      <section>
-        <div>
-          <div>
+      <section id="hero-banner">
+        <div id="hero-banner-up">
+          <div id="hero-banner-text">
             <span>Why Qrates</span>
             <h1>Your music on vinyl. Without tht barriers.</h1>
             <p>
@@ -35,11 +43,11 @@
               and you keep up to 85% of porfits. ↓
             </p>
           </div>
-          <img src="" alt="" />
+          <img src="./assets/wireframe.png" alt="" />
         </div>
         <div>
-          <img src="" alt="" />
-          <img src="" alt="" />
+          <img src="./assets/wireframe.png" alt="" />
+          <img src="./assets/wireframe.png" alt="" />
         </div>
       </section>
       <div>
@@ -58,7 +66,7 @@
           </p>
           <img src="" alt="" />
           <button>
-            <a href=""> Learn more </a>
+            <a href="https://github.com/abroudoux"> Learn more </a>
           </button>
         </div>
         <div>
@@ -70,7 +78,7 @@
           </p>
           <img src="" alt="" />
           <button>
-            <a href=""> Learn more </a>
+            <a href="https://github.com/abroudoux"> Learn more </a>
           </button>
         </div>
       </section>
@@ -79,7 +87,7 @@
           Just after straight up vinyl pressing? We do that too. Records are
           shipped in bulk to wherever you need.
         </p>
-        <a href="">Start a press only project</a>
+        <a href="https://github.com/abroudoux">Start a press only project</a>
       </div>
       <section></section>
       <section>
@@ -120,7 +128,7 @@
           front of fans, connect with artists, labels and stores.
         </p>
         <button>
-          <a href="">Browse artists</a>
+          <a href="https://github.com/abroudoux">Browse artists</a>
         </button>
       </section>
       <section>
@@ -138,16 +146,24 @@
       <section>
         <ul>
           <li>
-            <a href=""><span>Chilled cow</span> is on Qrates</a>
+            <a href="https://github.com/abroudoux"
+              ><span>Chilled cow</span> is on Qrates</a
+            >
           </li>
           <li>
-            <a href=""><span>SOL</span> is on Qrates</a>
+            <a href="https://github.com/abroudoux"
+              ><span>SOL</span> is on Qrates</a
+            >
           </li>
           <li>
-            <a href=""><span>Vuflpeck</span> is on Qrates</a>
+            <a href="https://github.com/abroudoux"
+              ><span>Vuflpeck</span> is on Qrates</a
+            >
           </li>
           <li>
-            <a href=""><span>Chillhop</span> is on Qrates</a>
+            <a href="https://github.com/abroudoux"
+              ><span>Chillhop</span> is on Qrates</a
+            >
           </li>
         </ul>
       </section>
@@ -179,7 +195,7 @@
         </p>
         <img src="" alt="" />
         <button>
-          <a href="">Try it now</a>
+          <a href="https://github.com/abroudoux">Try it now</a>
         </button>
         <div><img src="" alt="" /></div>
       </section>
@@ -230,17 +246,17 @@
         <div>
           <ul>
             <li>
-              <a href="">
+              <a href="https://github.com/abroudoux">
                 <img src="" alt="" />
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://github.com/abroudoux">
                 <img src="" alt="" />
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://github.com/abroudoux">
                 <img src="" alt="" />
               </a>
             </li>
