--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
           <img src="./assets/wireframe.png" alt="" />
         </div>
       </section>
-      <div>
+      <aside>
         <p>
           No matter you're at in your carrer, we've goy a production model to
           suit you.
         </p>
-      </div>
-      <section>
+      </aside>
+      <section id="infos-cta">
         <div>
           <span>No risk, no waste</span>
           <h2>Crowfunding</h2>
@@ -64,7 +64,7 @@
             Rally your fans and gather pledges. Press the exact number of
             records you need, without having to pay anything upfront.
           </p>
-          <img src="" alt="" />
+          <img src="./assets/wireframe.png" alt="" />
           <button>
             <a href="https://github.com/abroudoux"> Learn more </a>
           </button>
@@ -76,13 +76,13 @@
             Launch your record, sooner. take pre-orders from fans and we'll take
             care of the rest.
           </p>
-          <img src="" alt="" />
+          <img src="./assets/wireframe.png" alt="" />
           <button>
             <a href="https://github.com/abroudoux"> Learn more </a>
           </button>
         </div>
       </section>
-      <div>
+      <div id="start-project">
         <p>
           Just after straight up vinyl pressing? We do that too. Records are
           shipped in bulk to wherever you need.
@@ -120,7 +120,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="community">
         <span>Community</span>
         <h2>Join a growing community.</h2>
         <p>
