--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </section>
     </main>
     <footer>
-      <div>
+      <div id="footer-links">
         <div>
           <p>For artists</p>
           <ul>
@@ -241,23 +241,25 @@
           </ul>
         </div>
       </div>
-      <div>
-        <img src="" alt="" />
+      <div id="footer-down">
+        <a href="" id="logo">
+          <img src="./assets/wireframe.png" alt="" />
+        </a>
         <div>
           <ul>
             <li>
               <a href="https://github.com/abroudoux">
-                <img src="" alt="" />
+                <img src="./assets/wireframe.png" alt="" />
               </a>
             </li>
             <li>
               <a href="https://github.com/abroudoux">
-                <img src="" alt="" />
+                <img src="./assets/wireframe.png" alt="" />
               </a>
             </li>
             <li>
               <a href="https://github.com/abroudoux">
-                <img src="" alt="" />
+                <img src="./assets/wireframe.png" alt="" />
               </a>
             </li>
           </ul>
