--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <img src="" alt="" />
         </div>
       </section>
-      <section>
+      <section id="artists-carousel">
         <ul>
           <li>
             <a href="https://github.com/abroudoux"
@@ -167,8 +167,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <div>
+      <section id="artists-section">
+        <div id="artists-section-left">
           <span>artists on Qrates</span>
           <p>
             "The response was overwhelming. it made me wonder why I hadn't
@@ -176,16 +176,16 @@
             people had been waiting for for a long time."
           </p>
           <p>-SOL</p>
-          <div>
+          <div id="artists-section-pagination">
             <button>1</button>
             <button>2</button>
           </div>
         </div>
-        <div>
-          <img src="" alt="" />
+        <div id="artists-section-right">
+          <img src="./assets/wireframe.png" alt="" />
         </div>
       </section>
-      <section>
+      <section id="section-try">
         <span>Vinyl studio</span>
         <h2>Make it real with Qrates Vinyl Studio</h2>
         <p>
@@ -193,11 +193,11 @@
           to immediately see how much your project will cost, and how much
           you'll earn.
         </p>
-        <img src="" alt="" />
+        <img src="./assets/wireframe.png" alt="" />
         <button>
           <a href="https://github.com/abroudoux">Try it now</a>
         </button>
-        <div><img src="" alt="" /></div>
+        <div id="money-image"><img src="./assets/wireframe.png" alt="" /></div>
       </section>
     </main>
     <footer>
@@ -216,7 +216,7 @@
         <div>
           <p>For fans</p>
           <ul>
-            <li>Discovcer</li>
+            <li>Discover</li>
             <li>Records</li>
             <li>Stories</li>
             <li>Lists</li>
