--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <h1>Your music on vinyl. Without tht barriers.</h1>
             <p>
               Full-serivce pressing, a global retail network, customer support -
-              and you keep up to 85% of porfits. ↓
+              and you keep up to 85% of profits. ↓
             </p>
           </div>
           <img src="./assets/wireframe.png" alt="" />
         </div>
-        <div>
+        <div id="hero-banner-down">
           <img src="./assets/wireframe.png" alt="" />
           <img src="./assets/wireframe.png" alt="" />
         </div>
