--- a/index.html
+++ b/index.html
@@ -131,16 +131,21 @@
           <a href="https://github.com/abroudoux">Browse artists</a>
         </button>
       </section>
-      <section>
-        <div>
-          <img src="" alt="" />
+      <section id="gallery">
+        <div class="main-image grid-item">
+          <img src="./assets/wireframe.png" alt="Main Image" />
         </div>
-        <div>
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+        <div class="grid-item">
+          <img src="assets/wireframe.png" alt="Image 1" />
+        </div>
+        <div class="grid-item">
+          <img src="assets/wireframe.png" alt="Image 2" />
+        </div>
+        <div class="grid-item">
+          <img src="assets/wireframe.png" alt="Image 3" />
+        </div>
+        <div class="grid-item">
+          <img src="assets/wireframe.png" alt="Image 4" />
         </div>
       </section>
       <section id="artists-carousel">
